# GameProject

./: CMakeLists.txt  README.md
SDL2/SDL2_image/cmake/: sdl2_image-config-version.cmake  sdl2_image-config.cmake
SDL2/SDL2_image/i686-w64-mingw32/lib/cmake/SDL2_image/: Findlibjxl.cmake  sdl2_image-config-version.cmake
SDL2/SDL2_image/x86_64-w64-mingw32/lib/cmake/SDL2_image/: Findwebp.cmake  sdl2_image-config.cmake
SDL2/SDL2_ttf/: CHANGES.txt
SDL2/SDL2_ttf/cmake/: sdl2_ttf-config-version.cmake  sdl2_ttf-config.cmake
SDL2/SDL2_ttf/i686-w64-mingw32/lib/: libSDL2_ttf.la
SDL2/SDL2_ttf/i686-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
SDL2/SDL2_ttf/i686-w64-mingw32/lib/pkgconfig/: SDL2_ttf.pc
SDL2/SDL2_ttf/x86_64-w64-mingw32/lib/cmake/SDL2_ttf/: sdl2_ttf-config-version.cmake
SDL2/docs/: README-android.md  README-cmake.md  README-dynapi.md  README-emscripten.md  README-gdk.md  README-ios.md  README-n3ds.md  README-os2.md  README-riscos.md  README-visualc.md  README-vita.md
SDL2/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
SDL2/test/: CMakeLists.txt
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  readme.md
src/: Game.cpp  Game.h  main.cpp
src/core/: Timer.cpp  Timer.h  Vector2D.cpp  Vector2D.h
src/entities/: Bullet.cpp  Bullet.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h
src/graphics/: TextureManager.cpp  TextureManager.h
src/input/: InputHandler.cpp  InputHandler.h
